2018-??-?? v0.4.1
	* FEATURE: load settings from configuration files
	* FEATURE: --skip & --range options
	* CHANGE: renamed --disable-log-colors option to --log-color
	* CHANGE: optional boolean arguments for --follow & --quote options
	* FIX: memory leak when specifying multiple expressions

2017-12-23 v0.4.0
	* FEATURE: support multiple starting points/search paths
	* FEATURE: allow user-friendly field names in expressions and sort strings
	           (e.g. "%{path}" instead of "%p")
	* FEATURE: new test suite
	* CHANGE: search extensions in /usr/lib/efind instead of
	          /etc/efind
	* CHANGE: renamed --list-extensions option to --print-extensions
	* CHANGE: renamed --show-blacklist option to --print-blacklist
	* CHANGE: don't abort import of extensions if a single import
	          fails
	* CHANGE: enable colored log messages by default
	* CHANGE: the fields %a, %c and %t print the timestamp in seconds
	* FIX: recognize regex and iregex attributes
	* FIX: allow filter functions as first function argument
	       (e.g. "foo(bar(1, 2), 3)")
	* FIX: always return error code if "find" child process fails
	* FIX: integer overflow on x86 when calculating sparseness of
	       files greater than 2G

2017-10-31 v0.3.1
	* FEATURE: not-operator
	* FEATURE: EFIND_EXTENSION_PATH environment variable for
	           additional extension directories

2017-08-15 v0.3.0
	* FEATURE: --order-by option
	* FEATURE: gettext support
	* FEATURE: german translation

2017-07-16 v0.2.2
	* FEATURE: --show-blacklist option to print blacklisted extensions
	* CHANGE: replaced libavcall with libffi

2017-07-04: v0.2.1
	* FEATURE: --log-level option to enable logging with different
	           verbosities
	* FEATURE: --enable-log-color option to print colored log
	           messages
	* FEATURE: "empty" flag to test if a regular file or directory
	           is empty
	* FEATURE: "filesystem" property to test the filesystem a file
	           is on